src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float32__cast_float32_to_int16__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/float32.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Int16,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Int16,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: Some(
        CastInt16ToFloat32(
            CastInt16ToFloat32,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
